text-align issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -537,7 +537,8 @@ col-3, col-5, col-6, col-8, col-xs-12, col-md-5{
 }
 
 .left{
-  align-items: left !important;
+  display: inline-block;
+  text-align: left;
 }
 
 .right-yellow{
